# my_friend_bishop

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
include/my_friend_bishop/: Bishop.h
scripts/: run_bishop.sh  run_tests.sh
src/: Bishop.cc  CMakeLists.txt
test/: CMakeLists.txt  test_Bishop.cc
